--- a/audioRecorder/res/layout/raw.xml
+++ b/audioRecorder/res/layout/raw.xml
@@ -1,61 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
-
 <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="vertical">
 
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+	<LinearLayout
+		android:id="@+id/linearLayout1"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textViewAudioFile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_weight="0.5"
-        android:text="AudioFile"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/sky_blue" />
+		<CheckBox
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:id="@+id/rawCheckBox1"/>
 
-    <TextView
-        android:id="@+id/textViewDateTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.8"
-        android:text="Data"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+		<TextView
+			android:id="@+id/textViewAudioFile"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginRight="@dimen/activity_horizontal_margin"
+			android:layout_weight="0.5"
+			android:text="AudioFile"
+			android:textAppearance="?android:attr/textAppearanceSmall"
+			android:textColor="@color/sky_blue"
+			android:singleLine="true"/>
 
-</LinearLayout>
+		<TextView
+			android:id="@+id/textViewDateTime"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="0.8"
+			android:text="Data"
+			android:textAppearance="?android:attr/textAppearanceSmall"/>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+	</LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewTextFile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_weight="0.5"
-        android:text="AudioFile"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/sky_blue" />
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textViewDuration"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.8"
-        android:text="Data"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+		<TextView
+			android:id="@+id/textViewTextFile"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginRight="@dimen/activity_horizontal_margin"
+			android:layout_weight="0.5"
+			android:text="AudioFile"
+			android:textAppearance="?android:attr/textAppearanceSmall"
+			android:textColor="@color/sky_blue"/>
 
-</LinearLayout>
+		<TextView
+			android:id="@+id/textViewDuration"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="0.8"
+			android:text="Data"
+			android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+	</LinearLayout>
 
 </LinearLayout>
 
