--- a/audioRecorder/res/menu/main.xml
+++ b/audioRecorder/res/menu/main.xml
@@ -49,8 +49,14 @@
         android:icon="@drawable/submenu">
 		<menu>
 			<item
+				android:id="@+id/action_edit"
+				android:orderInCategory="305"
+				android:showAsAction="never"
+				android:title="@string/action_list_edit"/>
+			
+			<item
 				android:id="@+id/action_settings"
-				android:orderInCategory="100"
+				android:orderInCategory="310"
 				android:showAsAction="never"
 				android:title="@string/action_settings"/>
 			
