--- a/audioRecorder/res/layout/rec.xml
+++ b/audioRecorder/res/layout/rec.xml
@@ -131,25 +131,26 @@
 		android:layout_width="match_parent"
 		android:orientation="horizontal">
 
-		<Button
-			android:layout_height="wrap_content"
-			android:text="@string/cancel"
-			android:layout_width="match_parent"
-			android:layout_weight="0.33"/>
-
-		<Button
-			android:layout_height="wrap_content"
-			android:text="@string/yes"
-			android:layout_width="match_parent"
-			android:layout_weight="0.33"/>
-
-		<Button
-			android:layout_height="wrap_content"
-			android:text="@string/no"
-			android:layout_width="match_parent"
-			android:layout_weight="0.33"/>
-
 	</LinearLayout>
 
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal" >
+
+		<Button
+	    android:id="@+id/dialogrecCreate"
+			android:layout_height="wrap_content"
+			android:text="@string/create"
+			android:layout_width="match_parent"
+			android:layout_weight="0.25"/>
+
+		<Button
+			android:layout_height="wrap_content"
+			android:text="@string/select"
+			android:layout_width="match_parent"
+			android:layout_weight="0.25"/>
+	</LinearLayout>
+		
 </LinearLayout>
 
