--- a/audioRecorder/res/layout/rec.xml
+++ b/audioRecorder/res/layout/rec.xml
@@ -112,9 +112,11 @@
 		android:layout_weight="0.5">
 
 		<ListView
-			android:layout_height="match_parent"
-			android:layout_width="wrap_content"
-			android:id="@+id/dialogrecListViewTags"/>
+		    android:id="@+id/dialogrecListViewTags"
+		    android:layout_width="wrap_content"
+		    android:layout_height="match_parent"
+		    android:background="@color/bronze_light2"
+		    android:paddingLeft="@dimen/activity_horizontal_margin" />
 
 	</LinearLayout>
 
@@ -139,17 +141,28 @@
 	    android:orientation="horizontal" >
 
 		<Button
-	    android:id="@+id/dialogrecCreate"
+		    android:id="@+id/dialogrecCreate"
 			android:layout_height="wrap_content"
 			android:text="@string/create"
 			android:layout_width="match_parent"
 			android:layout_weight="0.25"/>
 
 		<Button
+		    android:id="@+id/dialogrecSelect"
 			android:layout_height="wrap_content"
 			android:text="@string/select"
 			android:layout_width="match_parent"
 			android:layout_weight="0.25"/>
+
+		<ImageButton
+		    android:id="@+id/imageButton1"
+		    android:scaleType="fitXY"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="0.35"
+		    android:adjustViewBounds="true"
+		    android:src="@drawable/delete" />
+
 	</LinearLayout>
 		
 </LinearLayout>
