--- a/audioRecorder/res/layout/rec.xml
+++ b/audioRecorder/res/layout/rec.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
+    
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="@color/blue_title"/>
+	
 	<LinearLayout
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
@@ -17,13 +22,17 @@
 			android:layout_width="wrap_content"
 			android:textColor="@color/sky_blue"/>
 
-	</LinearLayout>
+		<EditText
+		    android:id="@+id/dialogsaverecAudioFileName"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="1"
+		    android:ems="10" >
 
-	<EditText
-		android:layout_height="wrap_content"
-		android:ems="10"
-		android:layout_width="wrap_content"
-		android:id="@+id/dialogsaverecAudioFileName"/>
+		    <requestFocus />
+		</EditText>
+
+	</LinearLayout>
 
 	<LinearLayout
 		android:layout_height="wrap_content"
@@ -70,9 +79,10 @@
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:orientation="horizontal">
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal"
+	    android:paddingBottom="@dimen/activity_horizontal_margin" >
 
 		<TextView
 			android:layout_height="wrap_content"
@@ -96,20 +106,49 @@
 		android:layout_width="wrap_content"
 		android:orientation="horizontal">
 
-		<TextView
-			android:layout_height="wrap_content"
-			android:text="@string/dialog_save_tags"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:layout_width="wrap_content"
-			android:textColor="@color/sky_blue"/>
-
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_height="match_parent"
-		android:layout_width="match_parent"
-		android:orientation="vertical"
-		android:layout_weight="0.5">
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_weight="0.5"
+	    android:background="@color/bronze_light2"
+	    android:orientation="vertical" >
+
+		<TextView
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="@string/dialog_save_tags"
+		    android:textAppearance="?android:attr/textAppearanceMedium"
+		    android:textColor="@color/sky_blue" />
+
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:background="@color/bronze_light2"
+		    android:orientation="horizontal" >
+
+		    <Button
+		        android:id="@+id/dialogrecCreate"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:drawableLeft="@drawable/addsmall"
+		        android:text="@string/newtag" />
+
+		    <Button
+		        android:id="@+id/dialogrecSelect"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="0.25"
+		        android:drawableLeft="@drawable/addsmall"
+		        android:text="@string/select" />
+
+		    <Button
+		        android:id="@+id/dialogrecDelete"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:drawableLeft="@drawable/deletesmall" />
+		</LinearLayout>
 
 		<ListView
 		    android:id="@+id/dialogrecListViewTags"
@@ -120,50 +159,31 @@
 
 	</LinearLayout>
 
-	<TextView
-		android:layout_height="wrap_content"
-		android:text=""
-		android:textAppearance="?android:attr/textAppearanceMedium"
-		android:layout_width="wrap_content"
-		android:id="@+id/dialogsaverecTextView999"
-		android:textColor="@color/navy"/>
-
 	<LinearLayout
 		android:layout_height="wrap_content"
 		android:layout_width="match_parent"
 		android:orientation="horizontal">
 
-	</LinearLayout>
-
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal" >
+		<Button
+			android:layout_height="wrap_content"
+			android:text="@string/cancel"
+			android:layout_width="match_parent"
+			android:layout_weight="0.33"/>
 
 		<Button
-		    android:id="@+id/dialogrecCreate"
-			android:layout_height="wrap_content"
-			android:text="@string/create"
-			android:layout_width="match_parent"
-			android:layout_weight="0.25"/>
-
-		<Button
-		    android:id="@+id/dialogrecSelect"
-			android:layout_height="wrap_content"
-			android:text="@string/select"
-			android:layout_width="match_parent"
-			android:layout_weight="0.25"/>
-
-		<ImageButton
-		    android:id="@+id/imageButton1"
-		    android:scaleType="fitXY"
-		    android:layout_width="wrap_content"
+		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:layout_weight="0.35"
-		    android:adjustViewBounds="true"
-		    android:src="@drawable/delete" />
+		    android:layout_weight="0.33"
+		    android:drawableLeft="@drawable/ok1"
+		    android:text="@string/yes" />
+
+		<Button
+			android:layout_height="wrap_content"
+			android:text="@string/no"
+			android:layout_width="match_parent"
+			android:layout_weight="0.33"/>
 
 	</LinearLayout>
-		
+				
 </LinearLayout>
 
